--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "datasets>=4.0.0",
     "fastapi>=0.110.0",
     "ipywidgets==8.1.7",
+    "lighteval>=0.12.0",
     "notebook>=7.4.4",
     "pydantic>=2.7.0",
     "python-dotenv>=1.1.1",
